# multi-human-workflows

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  justfile  lefthook.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.server.json  vite.config.ts  vitest.config.ts
.beads/: issues.jsonl  metadata.json
.claude/: AGENTS.md  settings.json  team.yaml
.claude-plugin/: marketplace.json  plugin.json
.storybook/: main.ts  preview.ts
agents/: .env.example  README.md  pyproject.toml
agents/src/seam_agents/: __init__.py  cli.py  coder_client.py  config.py  mcp_client.py  tools.py  tracing.py
agents/src/seam_agents/agents/: __init__.py  session_agent.py
agents/src/seam_agents/models/: __init__.py  registry.py  router.py
agents/src/seam_agents/skills/: __init__.py  builtin.py
agents/src/seam_agents/workflows/: __init__.py  composer.py  memory.py  router.py  skills_bridge.py  state.py
agents/src/seam_agents/workflows/primitives/: __init__.py  critique.py  decompose.py  distill.py  gather.py  rank.py  verify.py
contracts/: validation.yaml
data/: sessions.json
docs/: deployment.md  design-cots-evaluation.md  design-inference-hooks.md  design-mcp-auth.md  design-requirements-flow.md  experience-design.md  from-idea-to-execution.docx  multi-human-intro.md  open-collaborative-sessions.docx  ory-auth-guide.md  plan-agent-console.md  plan-deployment.md  plan-ephemeral-agents.md  plan-frontend-router.md  plan-model-routing.md  plan-org-credentials.md  vision.md  (+9 more)
(+482 files in other folders)
