[project]
name = "seam-agents"
version = "0.1.0"
description = "LangGraph-powered agents for Seam collaborative sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-ollama>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "langfuse>=2.50",
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
seam-agent = "seam_agents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
